objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Annualized_Value__c</fullName>
        <formula>Monthly_Contribution__c * 12</formula>
        <label>Account Annualized Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Member</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dependents</relationshipLabel>
        <relationshipName>Accounts9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctOpp_Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AcctOpp Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Date__c</fullName>
        <label>Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Affinity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Affinity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Affinity_percent__c</fullName>
        <label>Affinity %</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Affinity_percent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF( NOT( ISBLANK( PersonBirthdate) ) ,
    

IF( DATE( 2000 , MONTH( PersonBirthdate ) , DAY( PersonBirthdate) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( 
      TODAY() ) ),
    YEAR (Today()) - YEAR ( PersonBirthdate),
    YEAR (Today()) - YEAR ( PersonBirthdate) -1 ),
  
   null)</formula>
        <inlineHelpText>Age of the member</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agent_ID_2__c</fullName>
        <description>This field auto populates the Agent ID from the Agent Label</description>
        <formula>Agent_Label__pr.Agent_ID__c</formula>
        <inlineHelpText>This field auto populates the Agent ID from the Agent Label</inlineHelpText>
        <label>Agent ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_ID__c</fullName>
        <description>Agent ID from Admin123.</description>
        <inlineHelpText>Agent ID from Admin123.</inlineHelpText>
        <label>Agent ID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Enrollment_by_OSH__c</fullName>
        <label>Allow Enrollment by OSH</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_Admin_Comm_percentage__c</fullName>
        <label>Annual Admin Comm %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Annual_Admin_Fee_Paid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Annual Admin Fee Paid</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Annual Admin Fee Paid)</relationshipLabel>
        <relationshipName>Accounts7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Admin_Fee__c</fullName>
        <label>Annual Admin Fee</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call Center</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Call Center)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Center_percent__c</fullName>
        <label>Call Center %</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Call_Center_percent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Level__c</fullName>
        <label>Contract Level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Contract_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Contract_Level</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contract_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>Name of the County where the Account is located</description>
        <inlineHelpText>Please enter the name of the County where the Account is located</inlineHelpText>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_O_Expiration_Date__c</fullName>
        <label>E&amp;O Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_2__c</fullName>
        <label>Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Error_Email__c</fullName>
        <description>Email ID field to store error email ID&apos;s coming out from Admin 123 during daily member upload</description>
        <label>Error Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Phone__c</fullName>
        <label>Error Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FMO</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (FMO)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FMO_percent__c</fullName>
        <label>FMO %</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FMO_percent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inactive_Date__c</fullName>
        <label>Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inactive_Reason__c</fullName>
        <label>Inactive Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Currently in Opportunity</fullName>
                </value>
                <value>
                    <fullName>No longer enrolling members</fullName>
                </value>
                <value>
                    <fullName>Opportunity was lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_Bill_Certification_Requirements_Met__c</fullName>
        <label>List Bill Certification Requirements Met</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_Bill_Certified__c</fullName>
        <formula>IF( AND( ISPICKVAL(List_Bill_Certification_Requirements_Met__c, &quot;Yes&quot;), ISPICKVAL(List_Bill_Training__c, &quot;Pass&quot;) ), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Bill Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>List_Bill_Producer_Agent_ID__c</fullName>
        <formula>List_Bill_Producer__r.Agent_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Bill Producer Agent ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Bill_Producer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>List Bill Producer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Producer</value>
            </filterItems>
            <infoMessage>List Bill Producer must be List Bill certified.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (List Bill Producer)</relationshipLabel>
        <relationshipName>Accounts8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>List_Bill_Training__c</fullName>
        <label>List Bill Training</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_Bill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>List Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MGP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MGP</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (MGP)</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MGP_percent__c</fullName>
        <label>MGP %</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MGP_percent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_Created_Date__c</fullName>
        <label>Member Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monthly_Admin_Comm_percentage__c</fullName>
        <label>Monthly Admin Comm %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Monthly_Admin_Fee_Paid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Monthly Admin Fee Paid</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Monthly Admin Fee Paid)</relationshipLabel>
        <relationshipName>Accounts6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monthly_Admin_Fee__c</fullName>
        <label>Monthly Admin Fee</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Commission_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Monthly Commission Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Contribution__c</fullName>
        <label>Monthly Contribution</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NPN_No__c</fullName>
        <label>NPN No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Billing_Date__c</fullName>
        <label>Next Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_of_Producers__c</fullName>
        <label>No. of Producers</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Projected_Members__c</fullName>
        <label>No. of Projected Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OSH_Enroller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OSH Enroller</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>One_Time_Admin_Fee__c</fullName>
        <label>One Time Admin Fee</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Agent_ID_2__c</fullName>
        <description>This field auto populates the Parent Agent ID from the Parent Account</description>
        <formula>Parent.Agent_ID__c</formula>
        <inlineHelpText>This field auto populates the Parent Agent ID from the Parent Account</inlineHelpText>
        <label>Parent Agent ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Agent_ID__c</fullName>
        <label>Parent Agent ID old</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pays_Downline_E_O__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pays Downline E&amp;O</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Producer_Member_Id__c</fullName>
        <label>Producer Member Id</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Producer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Producer)</relationshipLabel>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Producer_percent__c</fullName>
        <label>Producer %</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Producer_percent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Referral)</relationshipLabel>
        <relationshipName>Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral_percent__c</fullName>
        <label>Referral %</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Referral_percent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regional_Sales_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Sales Director</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>VP of Sales,Regional Sales Director</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Team_Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Team Referral</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Servicing_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Servicing Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Sales_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State Sales Director</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>VP of Sales,Regional Sales Director,State Sales Manager</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_txt__c</fullName>
        <label>Test txt</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Level_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Top Level Account Name</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Producer</value>
            </filterItems>
            <filterItems>
                <field>$Source.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Downline Accounts</relationshipLabel>
        <relationshipName>AccountsO6dW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Top_Level_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Top Level Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Comm_percentage__c</fullName>
        <formula>(IF(ISNUMBER(Text(Affinity_percent__c)),VALUE(Text(Affinity_percent__c)),0) + IF(ISNUMBER(Text(Call_Center_percent__c)),VALUE(Text(Call_Center_percent__c)),0) + IF(ISNUMBER(Text(FMO_percent__c)),VALUE(Text(FMO_percent__c)),0) + IF(ISNUMBER(Text(MGP_percent__c)),VALUE(Text(MGP_percent__c)),0) + IF(ISNUMBER(Text(Producer_percent__c)),VALUE(Text(Producer_percent__c)),0) + IF(ISNUMBER(Text(Referral_percent__c)),VALUE(Text(Referral_percent__c)),0))/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Comm %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VP_Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VP Sales</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>VP of Sales</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vfirst__Adjudication__c</fullName>
        <formula>IF(CONTAINS(vfirst__Site_Guest_Access_Helper__r.vfirst__Adjudication__c, &quot;Approved&quot;), 
IMAGE(&quot;https://salesforce.verifiedfirst.com/images/Approved.png&quot;, &quot;Approved&quot;, 14, 14),&apos;&apos;) 
+ 
IF(CONTAINS(vfirst__Site_Guest_Access_Helper__r.vfirst__Adjudication__c, &quot;Pending&quot;), 
IMAGE(&quot;https://salesforce.verifiedfirst.com/images/Pending.png&quot;, &quot;Pending&quot;, 14, 14),&apos;&apos;) 
+ 
IF(CONTAINS(vfirst__Site_Guest_Access_Helper__r.vfirst__Adjudication__c, &quot;Declined&quot;), 
IMAGE(&quot;https://salesforce.verifiedfirst.com/images/Declined.png&quot;, &quot;Declined&quot;, 14, 14),&apos;&apos;) 
+ 
IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Adjudication__c = &quot;-&quot;, 
&apos;To Be Determined&apos;, &apos; &apos; + vfirst__Site_Guest_Access_Helper__r.vfirst__Adjudication__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjudication</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vfirst__Site_Guest_Access_Helper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Verified First Site Guest Access Helper</label>
        <referenceTo>vfirst__Site_Guest_Access_Helper__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vfirst__Stage__c</fullName>
        <formula>IF(vfirst__Site_Guest_Access_Helper__r.vfirst__File_Processing__c,
  &apos;File Processing...&apos;,
  IF(OR(OR(OR(OR(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;x:email&apos;, vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;ready_to_order&apos;), vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;x:app_pending&apos;), CONTAINS(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c, &apos;pre_pull&apos;)), CONTAINS(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c, &apos;waiting_applicant&apos;)), 
    IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Archived__c, 
      IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Archived_By__c == &apos;Applicant&apos;, 
        &apos;Refused Invitation&apos;, 
        &apos;Withdrawn&apos; 
      ), 
      IF(CONTAINS(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c, &apos;pre_pull&apos;), 
        &apos;Partially Ordered&apos;, 
        IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;ready_to_order&apos;,
          &apos;Ready to Order&apos;,
          IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Invite_Send_Error__c,
            &apos;Notification Email Bounced&apos;, 
            &apos;Waiting on Applicant&apos; 
          ) 
        ) 
      ) 
    ), 
    IF(OR(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;x:pending&apos;, CONTAINS(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c, &apos;partial&apos;)), 
      &apos;Partially Complete&apos;, 
      IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;applicant_declined&apos;, 
        &apos;Applicant Declined&apos;, 
        IF(OR(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;x:ready&apos;, vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;complete&apos;), 
          &apos;Complete&apos;, 
          IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;canceled&apos;, 
            &apos;Canceled&apos;, 
            IF(OR(OR(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;x:email&apos;, vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;waiting_applicant-invitation_email&apos;), vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;waiting_applicant-invitation_sms&apos;), 
              &apos;Invitation Sent&apos;, 
              IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;complete-need_review&apos;, 
                &apos;Complete - In Need of Review&apos;, 
                IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;complete-approved&apos;, 
                  &apos;Complete - Approved&apos;, 
                  IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;complete-completed&apos;, 
                  &apos;Complete - Completed&apos;, 
                    IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;complete-preadverse&apos;, 
                    &apos;Complete - Pre-Adverse Action&apos;, 
                      IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;complete-adverse&apos;, 
                        &apos;Complete - Adverse Action&apos;, 
                        IF(ISBLANK(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c), 
                          &apos;&apos;, 
                          &apos;File Processing...&apos; 
                        ) 
                      ) 
                    ) 
                  ) 
                ) 
              ) 
            ) 
          ) 
        ) 
      ) 
    ) 
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vfirst__Verification_Report__c</fullName>
        <formula>IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;x:ready&apos;, 

	IF( CONTAINS($Api.Partner_Server_URL_300, &apos;.my.&apos;),
	HYPERLINK(SUBSTITUTE ( SUBSTITUTE ( LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300)), &apos;https://vfirst.&apos;, &apos;https://&apos;), &apos;.visual.&apos;, &apos;.sales&apos;) + &apos;apex/vfirst__PdfTemplate?objectId=&apos; + Id, IMAGE(&apos;https://salesforce.verifiedfirst.com/images/report%2Bactive.png&apos;, &apos;Ready &apos;,16,16))
	,
	HYPERLINK(SUBSTITUTE ( SUBSTITUTE ( LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300)), &apos;https://&apos;, &apos;https://vfirst.&apos;), &apos;.sales&apos;, &apos;.visual.&apos;) + &apos;apex/vfirst__PdfTemplate?objectId=&apos; + Id, IMAGE(&apos;https://salesforce.verifiedfirst.com/images/report%2Bactive.png&apos;, &apos;Ready &apos;,16,16))
	)
,
	IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;x:partial&apos;,

	IF( CONTAINS($Api.Partner_Server_URL_300, &apos;.my.&apos;),
	HYPERLINK(SUBSTITUTE ( SUBSTITUTE ( LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300)), &apos;https://vfirst.&apos;, &apos;https://&apos;), &apos;.visual.&apos;, &apos;.sales&apos;) + &apos;apex/vfirst__PdfTemplate?objectId=&apos; + Id, IMAGE(&apos;https://salesforce.verifiedfirst.com/images/report%2Byellow.png&apos;, &apos;Partially &apos;,16,16))
	,
	HYPERLINK(SUBSTITUTE ( SUBSTITUTE ( LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300)), &apos;https://&apos;, &apos;https://vfirst.&apos;), &apos;.sales&apos;, &apos;.visual.&apos;) + &apos;apex/vfirst__PdfTemplate?objectId=&apos; + Id, IMAGE(&apos;https://salesforce.verifiedfirst.com/images/report%2Byellow.png&apos;, &apos;Partially &apos;,16,16))
	) 
	,
	IMAGE(&apos;https://salesforce.verifiedfirst.com/images/report%2Binactive.png&apos;, &apos;Not Ready &apos;,16,16))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Verification Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vfirst__of_Background_Checks_Ordered__c</fullName>
        <formula>vfirst__Site_Guest_Access_Helper__r.vfirst__of_Background_Checks_Ordered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Background Checks Ordered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>VP_Sales__c</columns>
        <columns>Regional_Sales_Director__c</columns>
        <columns>State_Sales_Director__c</columns>
        <columns>Servicing_Representative__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>David_Gresl_s_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>VP_Sales__c</columns>
        <columns>Regional_Sales_Director__c</columns>
        <columns>State_Sales_Director__c</columns>
        <columns>Servicing_Representative__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Regional_Sales_Director__c</field>
            <operation>equals</operation>
            <value>David Gresl</value>
        </filters>
        <label>David Gresl&apos;s Accounts</label>
    </listViews>
    <listViews>
        <fullName>Member_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Dependent,PersonAccount.Primary_Member</value>
        </filters>
        <label>Member Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>Servicing_Representative__c</columns>
        <columns>State_Sales_Director__c</columns>
        <columns>Regional_Sales_Director__c</columns>
        <columns>VP_Sales__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>Victor_s_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VP_Sales__c</field>
            <operation>equals</operation>
            <value>Victor Mensavage</value>
        </filters>
        <label>Victor&apos;s Accounts</label>
    </listViews>
    <listViews>
        <fullName>Victoria_s_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VP_Sales__c</field>
            <operation>equals</operation>
            <value>Victoria Damone</value>
        </filters>
        <label>Victoria&apos;s Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Partner</fullName>
        <active>true</active>
        <label>Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Producer</fullName>
        <active>true</active>
        <label>Producer</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AcctOpp_Lock_field_must_be_checked</fullName>
        <active>true</active>
        <description>Hidden field that prevents users from arbitrarily creating Producer accounts. AcctOpp Lock field is populated during lead conversion.</description>
        <errorConditionFormula>AND
(
 $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
 RecordType.DeveloperName = &quot;Producer&quot;,
 AcctOpp_Lock__c = FALSE
)</errorConditionFormula>
        <errorMessage>You cannot create a new producer account without going through the lead conversion process. Please create a lead and then convert it to an opportunity and account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Affinity_Level_Approval</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$RecordType.Name = &quot;Producer&quot;,
ISPICKVAL(Contract_Type__c, &quot;Affinity&quot;),
NOT(ISPICKVAL(Approval_Status__c, &quot;Approved&quot;)),

OR
(
ISPICKVAL(Contract_Level__c , &quot;3&quot;),
ISPICKVAL(Contract_Level__c , &quot;4&quot;),
ISPICKVAL(Contract_Level__c , &quot;5&quot;)
)
)</errorConditionFormula>
        <errorDisplayField>Contract_Level__c</errorDisplayField>
        <errorMessage>Leads with contract type &apos;Affinity&apos; and contract level greater than 3 should be Submitted for Approval. Please contact your Sales Coordinator or Sales VP for further instructions.</errorMessage>
    </validationRules>
</CustomObject>